--- a/index.html
+++ b/index.html
@@ -4,17 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="wrapper">
+    <h1 class="btn" >Hello world</h1>
 
-        <h1 class="btn" >Hello world</h1>
-
-    </div>
     <script type="text/javascript" src="//www.gstatic.com/firebasejs/3.6.8/firebase.js"></script>
-    <!-- <script src="js/index.js"></script> -->
-    <!-- <script src="firebase-messaging-sw.js"></script> -->
-    <script type="text/javascript" src="firebase_subscribe.js"></script>
+    <script type="text/javascript" src="./js/firebase_subscribe.js"></script>
 </body>
 </html>
