--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="btn" >Hello world</h1>
+    <button class="btn" >Hello world</button>
 
     <script type="text/javascript" src="//www.gstatic.com/firebasejs/3.6.8/firebase.js"></script>
     <script type="text/javascript" src="./js/firebase_subscribe.js"></script>
